force-app/main/default/objects/ContentVersion/fields/Document_Category__c.field-meta.xml
<CustomField>
    <fullName>Document_Category__c</fullName>
    <label>Document Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proof of Residency</fullName>
            </value>
            <value>
                <fullName>Legal Document</fullName>
            </value>
            <value>
                <fullName>SNF936_ACKNOWLEDGEMENT OF RECEIPT OF THE NOTICE OF PRIVACY PRACTICES</fullName>
            </value>
            <value>
                <fullName>SNF1059_AUTHORIZATION TO DISCLOSE INFORMATION</fullName>
            </value>
            <value>
                <fullName>RCA Closure Letter</fullName>
            </value>
            <value>
                <fullName>Income Verification Document</fullName>
            </value>
            <value>
                <fullName>SSN Verification</fullName>
            </value>
            <value>
                <fullName>SSN Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>