force-app/main/default/objects/ContentVersion/fields/Master_PickList__c.field-meta.xml
<CustomField>
    <fullName>Master_PickList__c</fullName>
    <label>Master PickList</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal Referral</fullName>
            </value>
            <value>
                <fullName>Locked Referral</fullName>
            </value>
            <value>
                <fullName>Client_Service__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>